objects/IdMatrix_Vevo_Record__c.object
<CustomObject>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_IdMatrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda IdMatrix</label>
        <referenceTo>Veda_IdMatrix__c</referenceTo>
        <relationshipLabel>IdMatrix Vevo Record</relationshipLabel>
        <relationshipName>IdMatrix_Vevo_Record</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visa_Applicant__c</fullName>
        <label>Visa Applicant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visa_Class_Subclass__c</fullName>
        <label>Visa Class Subclass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visa_Date_Of_Expiry__c</fullName>
        <label>Visa Date Of Expiry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visa_Date_Of_Grant__c</fullName>
        <label>Visa Date Of Grant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visa_Work_Entitlement__c</fullName>
        <label>Visa Work Entitlement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IdMatrix Vevo Record</label>
    <nameField>
        <label>Vevo Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IdMatrix Vevo Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>